--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -1,103 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5442D2B6-C698-464D-A934-AA2706F3B95C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lingua.Core</RootNamespace>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <AssemblyName>Lingua.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <RootNamespace>Lingua.Core</RootNamespace>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Capitalizer.cs" />
-    <Compile Include="Encoder.cs" />
-    <Compile Include="Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Extensions\IntExtensions.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="ICapitalizer.cs" />
-    <Compile Include="IEvaluation.cs" />
-    <Compile Include="IGrammar.cs" />
-    <Compile Include="ILogger.cs" />
-    <Compile Include="IReason.cs" />
-    <Compile Include="IThesaurus.cs" />
-    <Compile Include="ITokenizer.cs" />
-    <Compile Include="ITranslation.cs" />
-    <Compile Include="LoaderBase.cs" />
-    <Compile Include="TokenGenerator.cs" />
-    <Compile Include="Tokens\Start.cs" />
-    <Compile Include="Tokens\Ellipsis.cs" />
-    <Compile Include="Tokens\Generic.cs" />
-    <Compile Include="Tokens\Punctuation.cs" />
-    <Compile Include="Tokens\Separator.cs" />
-    <Compile Include="Tokens\Terminator.cs" />
-    <Compile Include="Tokens\Number.cs" />
-    <Compile Include="Tokens\Aggregate.cs" />
-    <Compile Include="Tokens\AnyToken.cs" />
-    <Compile Include="WordClasses\Abbreviation.cs" />
-    <Compile Include="Tokens\Element.cs" />
-    <Compile Include="CompoundHandler.cs" />
-    <Compile Include="TranslationResult.cs" />
-    <Compile Include="WordClasses\AdverbQualifying.cs" />
-    <Compile Include="WordClasses\AdverbPositioning.cs" />
-    <Compile Include="WordClasses\AdverbQuestion.cs" />
-    <Compile Include="WordClasses\InfinitiveMarker.cs" />
-    <Compile Include="WordClasses\Conjunction.cs" />
-    <Compile Include="WordClasses\Name.cs" />
-    <Compile Include="WordClasses\Preposition.cs" />
-    <Compile Include="WordClasses\Pronoun.cs" />
-    <Compile Include="WordClasses\Auxiliary.cs" />
-    <Compile Include="WordClasses\Greeting.cs" />
-    <Compile Include="WordClasses\Verb.cs" />
-    <Compile Include="WordClasses\Article.cs" />
-    <Compile Include="WordClasses\Adjective.cs" />
-    <Compile Include="WordClasses\Quantifier.cs" />
-    <Compile Include="WordClasses\Unclassified.cs" />
-    <Compile Include="WordClasses\Noun.cs" />
-    <Compile Include="Translation.cs" />
-    <Compile Include="Translator.cs" />
-    <Compile Include="ITranslator.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tokens\Word.cs" />
-    <Compile Include="Tokens\Divider.cs" />
-    <Compile Include="Tokens\Token.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
