--- a/Learning/Learning.csproj
+++ b/Learning/Learning.csproj
@@ -1,104 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6F12FC3A-0E11-4E2B-BE31-3114F671D869}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lingua.Learning</RootNamespace>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <LangVersion>8.0</LangVersion>
     <AssemblyName>Lingua.Learning</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <RootNamespace>Lingua.Learning</RootNamespace>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=3.7.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.7.1\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <ProjectReference Include="..\Grammar\Grammar.csproj" />
+    <ProjectReference Include="..\Tokenization\Tokenization.csproj" />
+    <ProjectReference Include="..\Vocabulary\Vocabulary.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ArrangerGenerator.cs" />
-    <Compile Include="ConsoleReporter.cs" />
-    <Compile Include="InvalidExample.cs" />
-    <Compile Include="IPatternExtractor.cs" />
-    <Compile Include="LearningFailed.cs" />
-    <Compile Include="MissingTranslations.cs" />
-    <Compile Include="OrderMaker.cs" />
-    <Compile Include="ScoredPatternPriorityComputer.cs" />
-    <Compile Include="EvaluatorEnhancement.cs" />
-    <Compile Include="TestCaseTranslators\FullTextTranslator.cs" />
-    <Compile Include="TestCaseTranslators\ITestCaseTranslator.cs" />
-    <Compile Include="ITranslationExtractor.cs" />
-    <Compile Include="IReporter.cs" />
-    <Compile Include="ScoredPattern.cs" />
-    <Compile Include="TestCaseTranslators\PossibilitiesTranslator.cs" />
-    <Compile Include="TestRunnerSettings.cs" />
-    <Compile Include="TestSessionResult.cs" />
-    <Compile Include="TrainingSession.cs" />
-    <Compile Include="TranslationExtractor.cs" />
-    <Compile Include="PatternExtractor.cs" />
-    <Compile Include="TestCase.cs" />
-    <Compile Include="TargetSelector.cs" />
-    <Compile Include="TestRunner.cs" />
-    <Compile Include="TrainableEvaluator.cs" />
-    <Compile Include="Loader.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PatternGenerator.cs" />
-    <Compile Include="Trainer.cs" />
-    <Compile Include="TestBench.cs" />
-    <Compile Include="TestCaseResult.cs" />
-    <Compile Include="TestSuiteResult.cs" />
-    <Compile Include="TranslationTarget.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Core\Core.csproj">
-      <Project>{5442d2b6-c698-464d-a934-aa2706f3b95c}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Grammar\Grammar.csproj">
-      <Project>{13FC0B05-5926-4626-89C0-296CCF7444A7}</Project>
-      <Name>Grammar</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Tokenization\Tokenization.csproj">
-      <Project>{BF62CD42-7CDC-4616-9B25-49E985FFF1F7}</Project>
-      <Name>Tokenization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Vocabulary\Vocabulary.csproj">
-      <Project>{9C9EFB87-FDD6-42D2-A32E-8F3E3A95ED5B}</Project>
-      <Name>Vocabulary</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
