Some improvements. Still failing on last test case

--- a/Grammar.Test/Grammar.Test.csproj
+++ b/Grammar.Test/Grammar.Test.csproj
@@ -18,5 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Grammar\Grammar.csproj" />
+    <ProjectReference Include="..\Tokenization\Tokenization.csproj" />
+    <ProjectReference Include="..\Vocabulary\Vocabulary.csproj" />
   </ItemGroup>
 </Project>
