--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -13,5 +13,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
     <ProjectReference Include="..\Learning\Learning.csproj" />
+    <ProjectReference Include="..\Translation\Translation.csproj" />
   </ItemGroup>
 </Project>
